@@ -1,7 +1,22 @@
 # EnhancedTipCalculator
+###### Jawad Haider
+## Instructions
+12.3 (Enhanced Tip Calculator App) Modify the Tip Calculator app to allow the user to enter the number of people in the party. Calculate and display the amount owed by each person if the bill were to be split evenly among the party members.
+
+## Software Requirements:
+1. Scene Builder installation
+[Official site](https://gluonhq.com/products/scene-builder/) to download Scene Builder.
+
+2. [Official site](https://openjfx.io/) of JavaFX where you can find official documentation as well as download links.
+Step-by-step [instructions] (https://openjfx.io/openjfx-docs/) on how to install and run JavaFX applications.
+
+=> --module-path ${PATH_TO_JAVAFX} --add-modules javafx.controls,javafx.fxml
 
 An activity where an enhanced version of tip Calculator is made using JavaFx libraries. 
 Now, it includes the amount of party people and calculates how much each should pay.
+
+
+## ScreenShots
 
 ![](img/Screenshot%20from%202020-12-16%2011-28-52.png)
 ![](img/Screenshot%20from%202020-12-16%2011-29-04.png)
